fixed image bg position and fixed bug in overflow

--- a/index.css
+++ b/index.css
@@ -52,13 +52,15 @@ button {
 }
 
 .container {
-    max-width: 85%;
+    max-width: 80%;
     margin: 0 auto;
 }
 
 nav {
     padding: 1.5rem 0;
     background-color: var(--White);
+    position: relative;
+    z-index: 2;
 }
 
 .nav__container {
@@ -184,6 +186,10 @@ nav button {
 
 /*------------------------- main  -------------------*/
 
+body {
+    overflow-x: hidden;
+}
+
 .mobile__bg {
     width: 100%;
     height: 45vh;
@@ -203,6 +209,13 @@ nav button {
 }
 
 
+.intro__section img {
+    position: absolute;
+    max-width: clamp(410px, 40vw, 560px);
+    right: -8%;
+    display: none;
+}
+
 .intro__container {
     display: flex;
     flex-direction: column;
@@ -213,7 +226,7 @@ nav button {
 .intro__heading {
     color: var(--Dark-Blue);
     font-weight: 500;
-    max-width: 21rem;
+    max-width: 22rem;
     text-align: center;
     font-size: clamp(2rem, 6vw, 3.25rem);
 }
@@ -496,14 +509,16 @@ footer a {
         text-align: left;
     }
 
+    /* url(images/image-mockups.png), */
+    /* 52vw 10%, */
+    /* 45%, */
     .intro__section {
         width: 100%;
         padding: 20vh 0;
-        background-image: url(images/image-mockups.png), url(images/bg-intro-desktop.svg);
+        background-image: url(images/bg-intro-desktop.svg);
         background-repeat: no-repeat;
-        background-overflow: hidden;
-        background-position: 52vw 10%, 44vw 90%;
-        background-size: 45%, 900px;
+        background-position: 48vw 75%;
+        background-size: 950px;
     }
 
 
@@ -585,11 +600,21 @@ footer a {
     .mobile__navigation {
         display: none;
     }
+
+    .intro__section img {
+        display: block;
+        top: 2%;
+        right: -4%;
+    }
 }
 
 @media (max-width: 850px) {
     .container {
         max-width: 90%;
+    }
+
+    .intro__section img {
+        right: -8%;
     }
 }
 
